Fix hero alignment

--- a/css/toolkit.css
+++ b/css/toolkit.css
@@ -3474,7 +3474,7 @@ select[multiple].nu > .on > .dl {
   float: right;
   margin-right: 10px;
   padding: 9px 10px;
-  margin-top: 8px;
+  margin-top: 30px;
   margin-bottom: 8px;
   background-color: transparent;
   background-image: none;
@@ -5169,7 +5169,7 @@ body {
 }
 .tu .pv {
   padding-left: 5px;
-  padding-right: 5px;
+  padding-right: 32px;
 }
 @media (min-width: 768px) {
   .tu {
